// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly 1`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-1"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      data-tab-id="tab-0"
      id="react-tabs-0"
      role="tab"
      tabindex="0"
    >
      Mario
    </li>
    <li
      aria-controls="react-tabs-3"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      data-tab-id="tab-1"
      id="react-tabs-2"
      role="tab"
    >
      Peach
    </li>
    <li
      aria-controls="react-tabs-5"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      data-tab-id="tab-2"
      id="react-tabs-4"
      role="tab"
    >
      Yoshi
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-0"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-1"
    role="tabpanel"
  >
    Mario ipsum dolor sit, amet consectetur adipisicing elit.
  </div>
  <div
    aria-labelledby="react-tabs-2"
    class="react-tabs__tab-panel"
    id="react-tabs-3"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-4"
    class="react-tabs__tab-panel"
    id="react-tabs-5"
    role="tabpanel"
  />
</div>
`;

exports[`Tabs renders correctly 2`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-1"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      data-tab-id="tab-0"
      id="react-tabs-0"
      role="tab"
    >
      Mario
    </li>
    <li
      aria-controls="react-tabs-3"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      data-tab-id="tab-1"
      id="react-tabs-2"
      role="tab"
      tabindex="0"
    >
      Peach
    </li>
    <li
      aria-controls="react-tabs-5"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      data-tab-id="tab-2"
      id="react-tabs-4"
      role="tab"
    >
      Yoshi
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-0"
    class="react-tabs__tab-panel"
    id="react-tabs-1"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-2"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-3"
    role="tabpanel"
  >
    Peach ratione laudantium inventore ullam debitis optio rerum eum modi.
  </div>
  <div
    aria-labelledby="react-tabs-4"
    class="react-tabs__tab-panel"
    id="react-tabs-5"
    role="tabpanel"
  />
</div>
`;

exports[`Tabs renders correctly 3`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-1"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      data-tab-id="tab-0"
      id="react-tabs-0"
      role="tab"
    >
      Mario
    </li>
    <li
      aria-controls="react-tabs-3"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      data-tab-id="tab-1"
      id="react-tabs-2"
      role="tab"
    >
      Peach
    </li>
    <li
      aria-controls="react-tabs-5"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      data-tab-id="tab-2"
      id="react-tabs-4"
      role="tab"
      tabindex="0"
    >
      Yoshi
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-0"
    class="react-tabs__tab-panel"
    id="react-tabs-1"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-2"
    class="react-tabs__tab-panel"
    id="react-tabs-3"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-4"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-5"
    role="tabpanel"
  >
    Yoshi animi odit officia temporibus est enim, quas at facilis officiis? Itaque!
  </div>
</div>
`;

exports[`Tabs renders correctly 4`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-1"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      data-tab-id="tab-0"
      id="react-tabs-0"
      role="tab"
      tabindex="0"
    >
      Mario
    </li>
    <li
      aria-controls="react-tabs-3"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      data-tab-id="tab-1"
      id="react-tabs-2"
      role="tab"
    >
      Peach
    </li>
    <li
      aria-controls="react-tabs-5"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      data-tab-id="tab-2"
      id="react-tabs-4"
      role="tab"
    >
      Yoshi
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-0"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-1"
    role="tabpanel"
  >
    Mario ipsum dolor sit, amet consectetur adipisicing elit.
  </div>
  <div
    aria-labelledby="react-tabs-2"
    class="react-tabs__tab-panel"
    id="react-tabs-3"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-4"
    class="react-tabs__tab-panel"
    id="react-tabs-5"
    role="tabpanel"
  />
</div>
`;
